--- a/assets/css/caballero/style.css
+++ b/assets/css/caballero/style.css
@@ -1,3 +1,19 @@
-h1 {
-    padding-top: 10%;
+*{
+    color: white;
+    
+}
+.man {
+    padding-top: 5%;
+    padding-left: 2%;
+}
+.card{
+    width: 250px;
+    height: 600px;
+    background-color: rgba(100, 99, 99, 0.279) ;
+}
+.card-title{
+    color: rgb(255, 187, 0);
+    font-weight: bold;
+    text-align: center;
+  
 }
