--- a/assets/css/header/style.css
+++ b/assets/css/header/style.css
@@ -66,10 +66,10 @@ header {
     transform-origin: left center;
     transition: transform 0.4s ease-in-out;
   }
-  #navbar{
+ /* #navbar{
     position: fixed;
     background-color: rgb(0, 0, 0);
-}
+}*/
 .active{
   color: rgb(255, 255, 255);
   font-weight: bold;
