--- a/assets/css/dama/style.css
+++ b/assets/css/dama/style.css
@@ -1,3 +1,47 @@
-h1 {
-    padding-top: 10%;
+* {
+  color: white;
+}
+.man {
+  padding-top: 5%;
+  padding-left: 2%;
+}
+.card {
+
+  width: 250px;
+  height: 600px;
+  background-color: rgba(100, 99, 99, 0.279);
+}
+.card-title {
+  color: rgb(255, 187, 0);
+  font-weight: bold;
+  text-align: center;
+}
+p{
+  text-align: center;
+}
+
+.clock {
+  padding-bottom: 4%;
+}
+.card:hover .card-img-top {
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8);
+  transition: 0.75s;
+  filter: grayscale(70%);
+}
+
+.text{
+    background-color: rgba(128, 128, 128, 0.283);
+    border-radius: 5%;
+
+}
+.btn{
+    background-color: rgba(128, 128, 128, 0.283);
+    margin-top: 2%;
+    border: 2px solid rgb(255, 187, 0);
+}
+.btn:hover{
+    background-color: green;
+    border: 2px solid green;
+    transition: 0.5s;
 }
