--- a/assets/css/about/style.css
+++ b/assets/css/about/style.css
@@ -4,8 +4,6 @@
 
 
 
-
-
 h1 {
     color: #ffffff;
     font-weight: bold;
@@ -18,6 +16,7 @@ h1 {
 .cont p{
     color: #ffffff;
     padding-top: 5%;
+    text-align: justify;
 }
 
 
