--- a/assets/css/login/style.css
+++ b/assets/css/login/style.css
@@ -132,7 +132,7 @@ a{color:inherit;text-decoration:none}
 .hr{
 	height:2px;
 	margin:60px 0 50px 0;
-	background:rgba(255,255,255,.2);
+	background:rgba(0, 0, 0, 0.2);
 }
 .foot{
 	text-align:center;
@@ -143,7 +143,7 @@ a{color:inherit;text-decoration:none}
 }
 
 ::placeholder{
-color: #b3b3b3;
+color: #6d6d6d;
 } 
 
 
@@ -151,3 +151,63 @@ color: #b3b3b3;
 	transform:rotate(0);
 
 }*/
+#edit-table {
+    background-color: rgba(175, 175, 175, 0.336);
+    color: black;
+}
+#edit-table td,th {
+    text-align: center;
+}
+#edit-table th {
+    background-color:rgb(255, 187, 0);
+}
+
+#main-content{
+    background-color: rgb(112, 112, 112);
+   border-radius: 10px;
+   
+   
+}
+label{
+    color: white;
+}
+.button-delete{
+    background-color: rgba(255, 0, 0, 0.656);
+}
+.button-edit{
+    background-color: rgb(8, 108, 133);
+    color: white;
+
+
+}
+input[class^="button"] {
+    border-radius: 10px;
+    color: white;
+    width: 75px;
+
+  }
+div.col{
+    display: flex;
+    justify-content: center;
+}
+.btn-save{
+
+    
+    background-color: rgb(5, 139, 14);
+    color: white;
+    width: 200px;
+ height: 30px;
+    border-radius: 15px;
+  
+}
+.btn-save:hover{
+    background-color: rgba(5, 139, 14, 0.635);
+    transition: 0.5s;
+}
+
+
+div[class^="table-responsive"]  > table{
+    background-color: rgb(255, 255, 255);
+    color: aquamarine;
+}
+  
