--- a/assets/css/carrito/style.css
+++ b/assets/css/carrito/style.css
@@ -1,17 +1,22 @@
 #edit-table {
-    background-color: rgba(161, 158, 158, 0.65);
+    background-color: rgb(226, 220, 200);
+    color: black;
+}
+#edit-table tbody tr:hover {
+    background-color: rgba(100, 96, 82, 0.514);
     color: black;
 }
 #edit-table td,th {
     text-align: center;
 }
 #edit-table th {
-    background-color:rgb(255, 187, 0);
+    background-color:rgb(15, 61, 62);
+    color: rgba(255, 255, 255, 0.795);
 }
 
 #main-content{
-    background-color: rgba(128, 128, 128, 0.224);
-   border-radius: 5%;
+    /*background-color: rgba(128, 128, 128, 0.224);*/
+   border-radius: 10px;
    margin-top: 5%;
    padding-top: 2%;
    
@@ -38,10 +43,10 @@ div.col{
     display: flex;
     justify-content: center;
 }
-.btn-clean{
+/*.btn-clean{
 
     
-    background-color: rgb(5, 139, 14);
+    background-color: rgb(226, 220, 200);
     color: white;
     width: 200px;
  height: 30px;
@@ -51,7 +56,23 @@ div.col{
 .btn-clean:hover{
     background-color: rgba(5, 139, 14, 0.635);
     transition: 0.5s;
+}*/
+.btn-clean{
+    background-color: rgba(128, 128, 128, 0.283);
+    color: white;
+    margin-top: 2%;
+    width: 200px;
+    height: 30px;
+    border: 2px solid rgb(255, 187, 0);
+    border-radius: 15px;
 }
+.btn-clean:hover{
+    background-color: green;
+    border: 2px solid green;
+    color: black;
+    transition: 0.5s;
+}
+
 
 
 div[class^="table-responsive"]  > table{
