--- a/assets/css/login/style.css
+++ b/assets/css/login/style.css
@@ -145,28 +145,36 @@ a{color:inherit;text-decoration:none}
 ::placeholder{
 color: #6d6d6d;
 } 
-
+tabla tbody tr:hover{
+	background-color: rgba(255, 0, 0, 0.336);
+    color: black;
+}
 
 /*.login-snip .sign-up:checked + .tab + .login-space .sign-up-form{
 	transform:rotate(0);
 
 }*/
-#edit-table {
-    background-color: rgba(175, 175, 175, 0.336);
+#data-table {
+    background-color: rgb(226, 220, 200);
     color: black;
 }
 #edit-table td,th {
     text-align: center;
 }
 #edit-table th {
-    background-color:rgb(255, 187, 0);
+    background-color:rgb(15, 61, 62);
+	color: rgba(255, 255, 255, 0.795);
 }
 
 #main-content{
-    background-color: rgb(112, 112, 112);
+  /*  background-color: rgb(112, 112, 112);*/
    border-radius: 10px;
+
    
-   
+}
+#data-table tbody tr:hover{
+    background-color: rgba(100, 96, 82, 0.514);
+    color: black;
 }
 label{
     color: white;
