--- a/assets/css/venta/style.css
+++ b/assets/css/venta/style.css
@@ -1,12 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
 #edit-table {
-    background-color: rgba(161, 158, 158, 0.65);
+    background-color: rgb(226, 220, 200);
     color: black;
 }
 #edit-table td,th {
     text-align: center;
 }
 #edit-table th {
-    background-color:rgb(255, 187, 0);
+    background-color:rgb(15, 61, 62);
+    color: rgba(255, 255, 255, 0.795);
 }
 
 #main-content{
@@ -16,7 +24,13 @@
    padding-top: 2%;
    
 }
+body{
+    background-color: rgb(0, 0, 0);
+}
 label{
+    color: white;
+}
+span{
     color: white;
 }
 .button-delete{
@@ -44,7 +58,7 @@ div.col{
     background-color: rgb(5, 139, 14);
     color: white;
     width: 200px;
- height: 30px;
+ height: 50px;
     border-radius: 15px;
   
 }
