generacion de la venta y detalle de la venta a falta de id de vventa correcta

--- a/assets/css/venta/style.css
+++ b/assets/css/venta/style.css
@@ -24,6 +24,10 @@
    padding-top: 2%;
    
 }
+#empresa, #telefono, #fecha{
+    background-color: black;
+    color: white;
+}
 body{
     background-color: rgb(0, 0, 0);
 }
